the final case-study layout, hopefully

--- a/coop.html
+++ b/coop.html
@@ -18,6 +18,7 @@
      <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
      <link rel="stylesheet" type="text/css" href="styles/normalize.css">
      <link rel="stylesheet" type="text/css" href="styles/main.css">
+     <link rel="stylesheet" type="text/css" href="styles/case-study.css">
      <link rel="stylesheet" type="text/css" href="styles/coop.css">
      <script src="javascript/script.js"></script>
   </head>
