Uploading case study coop changes

--- a/coop.html
+++ b/coop.html
@@ -23,7 +23,7 @@
      <script src="javascript/script.js"></script>
   </head>
 
-  <body class="coop-case-study">
+  <body class="case-study">
       <header>
           <nav>
               <a href="index.html" class="logo">
@@ -40,21 +40,21 @@
           </nav>
           <section class="hero">
               <div class="case-hero">
-                  <h1>standing out in a crowded room</h1>
                   <img src="images/coop-laptop.png">
-                  <div class="hero-text">
-                      <p>COOP is a SaaS web application which allows people to collect information and
-                        store it in a single place. A person can create simple documents, store images,
-                        links to websites, and collaborate with others. Originally named blocbox, we
-                        rebranded the company with a new website and brand.
-                      <p>COOP was a project under the Bloc certification course. It is not a functioning website.
-                      </p>
-                    </div>
-                    <a href="#"><button class="case-study-button">view prototype</button></a>
               </div>
           </section>
       </header>
       <main>
+          <div class="hero-text">
+              <h1>standing out in a crowded room</h1>
+              <p>COOP is a SaaS web application which allows people to collect information and
+                store it in a single place. A person can create simple documents, store images,
+                links to websites, and collaborate with others. Originally named blocbox, we
+                rebranded the company with a new website and brand.
+              <p>COOP was a project under the Bloc certification course. It is not a functioning website.
+              </p>
+              <a href="#"><button class="case-study-button">view prototype</button></a>
+          </div>
           <section class="intro">
               <div class="intro-text">
                   <h2>a new set of wings</h2>
@@ -69,13 +69,13 @@
                   <p>Box, Google Drive, and Dropbox are positioned for and are targeting
                     individuals and businesses. Their differences are in their display and
                     some features:</p>
+                  <div class="clearfix"></div>
                   <ul class="inspo">
                       <li><img src="images/coop-box.png" class="third"></li>
                       <li><img src="images/coop-drive.png" class="third"></li>
                       <li><img src="images/coop-dropbox.png" class="third"></li>
                   </ul>
-                  <div class="box"><p> </p></div>
-                  <p>
+                  <div class="clearfix"></div>
                   <p>Blocbox is also targeting individuals and businesses. Our goal
                     was to stand out by taking a more playful approach.</p>
               </div>
@@ -89,28 +89,30 @@
                     proposed solutions. Solutions that we could test through the rebrand.</p>
               </div>
           </section>
-          <section class="options">
-              <div class="options-container">
+          <section class="environment">
+              <div class="environment-container">
+                  <div class="clearfix"></div>
                   <div class="first">
                       <h3>Challenges</h3>
                       <ul class="survey">
-                          <li>Remembering what they bookmarked</li>
-                          <li>Not accessible across devices</li>
-                          <li>Remembering more passwords</li>
+                          <li><p>Remembering what they bookmarked</p></li>
+                          <li><p>Not accessible across devices</p></li>
+                          <li><p>Remembering more passwords</p></li>
                       </ul>
                   </div>
                   <div class="second">
-                      <h3>Solutions(?)</h3>
+                      <h3>Solutions</h3>
                       <ul class="survey">
-                            <li>Integration across devices</li>
-                            <li>Useful bookmarking/ saving: creating collections</li>
-                            <li>Convenience: social sign-on</li>
+                            <li><p>Integration across devices</p></li>
+                            <li><p>Useful bookmarking/ saving: creating collections</p></li>
+                            <li><p>Convenience: social sign-on</p></li>
                       </ul>
                   </div>
+                  <div class="clearfix"></div>
               </div>
           </section>
           <section class="users">
-              <div class="users">
+              <div class="users-container">
                   <h3>Who Are They?</h3>
                   <div class="user-boxes">
                       <div class="john">
@@ -140,26 +142,29 @@
                           process always deters her from using it (especially when
                           she get new devices) because of all the steps.</div>
                     </div>
+                    <div class="clearfix"></div>
                   </div>
               </div>
           </section>
           <section class="info-arch">
-              <div class="mapping">
+              <div class="info-arch-container">
                   <h2>information architecture</h2>
                   <h3>Mapping</h3>
-                  <p></p>
+                  <div class="clearfix"></div>
                   <div class="mapping-img">
                       <img src="images/coop-flow1.png" class="first" id="smaller">
                       <img src="images/coop-flow2.png" class="second">
                   </div>
-              </div>
-              <div class="mapping">
-                  <h3>Flows</h3>
-                  <p></p>
-                  <div class="mapping-img">
-                      <img src="images/coop-flow3.png" class="first">
-                      <img src="images/coop-flow4.png" class="second">
+                  <div class="clearfix"></div>
+                  <div class="mapping">
+                      <h3>Flows</h3>
+                      <div class="clearfix"></div>
+                      <div class="mapping-img">
+                          <img src="images/coop-flow3.png" class="first">
+                          <img src="images/coop-flow4.png" class="second">
+                      </div>
                   </div>
+                  <div class="clearfix"></div>
               </div>
           </section>
           <section class="sketch">
@@ -170,40 +175,45 @@
               </div>
           </section>
           <section class="branding">
-              <div class="case-logos">
-                  <h2>branding</h2>
-                  <img src="images/coop-logo-form.png" class="more-full">
-                  <h3>Logo Formation</h3>
-                  <img src="images/coop-logofinalists.png" class="coop-logo-formation">
+              <div class="branding-container">
+                  <div class="case-logos">
+                      <h2>branding</h2>
+                      <img src="images/coop-logo-form.png" class="more-full">
+                      <!---
+                      <h3>Logo Formation</h3>
+                      <img src="images/coop-logofinalists.png" class="coop-logo-formation">
+                  </div> -->
+                  <div class="case-logos">
+                      <h3>Logo & Icons</h3>
+                      <div class="final-logos">
+                          <img src="images/coop-logo.png" class="first">
+                          <img src="images/coop-icons.png" class="second">
+                          <div class="clearfix"></div>
+                      </div>
                   </div>
-                  <h3>Logo & Icons</h3>
-                  <div class="final-logos">
-                      <img src="images/coop-logo.png" class="first">
-                      <img src="images/coop-icons.png" class="second">
+                  <div class="colors">
+                      <h3>Colors</h3>
+                      <div class="color-samples">
+                          <ul class="images">
+                              <li><img src="images/coop-color1.png" class="third"></li>
+                              <li><img src="images/coop-color2.png" class="third"></li>
+                              <li><img src="images/coop-color3.png" class="third"></li>
+                              <li><img src="images/coop-color4.png" class="third"></li>
+                              <li><img src="images/coop-color5.png" class="third"></li>
+                              <li><img src="images/coop-color6.png" class="third"></li>
+                          </ul>
+                      </div>
                   </div>
-              </div>
-              <div class="colors">
-                  <h3>Colors</h3>
-                  <div class="color-samples">
-                      <ul class="images">
-                          <li><img src="images/coop-color1.png" class="sixth"></li>
-                          <li><img src="images/coop-color2.png" class="sixth"></li>
-                          <li><img src="images/coop-color3.png" class="sixth"></li>
-                          <li><img src="images/coop-color4.png" class="sixth"></li>
-                          <li><img src="images/coop-color5.png" class="sixth"></li>
-                          <li><img src="images/coop-color6.png" class="sixth"></li>
-                      </ul>
-                  </div>
-              </div>
-              <div class="other-branding">
-                  <div class="type">
-                      <h3>Typography</h3>
-                      <ul class="type-fonts">
-                          <li><span class="h1">H1 Nunito</span></li>
-                          <li><span class="h2">H2 Nunito</span></li>
-                          <li><span class="h3">H3 Nunito</span></li>
-                          <li><span class="body">Body Lora</span></li>
-                      </ul>
+                  <div class="other-branding">
+                      <div class="type">
+                          <h3>Typography</h3>
+                          <ul class="type-fonts">
+                              <li><span class="h1">H1 Nunito</span></li>
+                              <li><span class="h2">H2 Nunito</span></li>
+                              <li><span class="h3">H3 Nunito</span></li>
+                              <li><span class="body">Body Lora</span></li>
+                          </ul>
+                      </div>
                   </div>
               </div>
           </section>
@@ -219,38 +229,47 @@
                           </div>
                           <p></p>
                       </div> -->
-                  <h3>Landing Page</h3>
-                  <img src="images/coop-landing.png" class="full">
-              </div>
-              <div class="prototype-container">
-                  <h3>User Onboarding</h3>
-                  <p>The user onboarding and sign-in sections are simple and similar.
-                    We made it easy to sign up or log in through social network sites.</p>
-                  <img src="images/coop-signup.png" class="first">
-                  <img src="images/coop-signin.png" class="second">
-              </div>
-              <div class="prototype-container">
-                  <h3>Dashboard</h3>
-                  <img src="images/coop-dash.png" class="full">
-              </div>
-              <div class="prototype-container">
-                  <h3>Membership</h3>
-                  <ul class="prototype-images">
-                      <li><img src="images/coop-profile.png" class="third"></li>
-                      <li><img src="images/coop-notifications.png" class="third"></li>
-                      <li><img src="images/coop-membership.png" class="third"></li>
-                  </ul>
-              </div>
-              <div class="prototype-container">
-                  <h3>Adding content</h3>
-                  <p>To add content, the user will click on the “Add +” call to action.
-                    Once clicked, modal windows will appear. Users have a choice of
-                    adding an image, notes, or a link to an external site.</p>
-                  <ul class="prototype-images">
-                      <li><img src="images/coop-add-image.png" class="third"></li>
-                      <li><img src="images/coop-note.png" class="third"></li>
-                      <li><img src="images/coop-link.png" class="third"></li>
-                  </ul>
+                  <div class="landing-page">
+                      <h3>Landing Page</h3>
+                      <img src="images/coop-landing.png" class="full">
+                      <div class="clearfix"></div>
+                  </div>
+                  <div class="onboarding-page">
+                      <h3>User Onboarding</h3>
+                      <p>The user onboarding and sign-in sections are simple and similar.
+                        We made it easy to sign up or log in through social network sites.</p>
+                      <div class="onboard-img">
+                          <img src="images/coop-signup.png" class="first">
+                          <img src="images/coop-signin.png" class="second">
+                          <div class="clearfix"></div>
+                      </div>
+                  </div>
+                  <div class="dashboard-page">
+                      <h3>Dashboard</h3>
+                      <img src="images/coop-dash.png" class="full">
+                      <div class="clearfix"></div>
+                  </div>
+                  <div class="membership-page">
+                      <h3>Membership</h3>
+                      <ul class="prototype-images">
+                          <li><img src="images/coop-profile.png" class="third"></li>
+                          <li><img src="images/coop-notifications.png" class="third"></li>
+                          <li><img src="images/coop-membership.png" class="third"></li>
+                          <div class="clearfix"></div>
+                      </ul>
+                  </div>
+                  <div class="content-page">
+                      <h3>Adding content</h3>
+                      <p>To add content, the user will click on the “Add +” call to action.
+                        Once clicked, modal windows will appear. Users have a choice of
+                        adding an image, notes, or a link to an external site.</p>
+                      <ul class="prototype-images">
+                          <li><img src="images/coop-add-image.png" class="third"></li>
+                          <li><img src="images/coop-note.png" class="third"></li>
+                          <li><img src="images/coop-link.png" class="third"></li>
+                          <div class="clearfix"></div>
+                      </ul>
+                  </div>
               </div>
           </section>
 
