--- a/rfs.html
+++ b/rfs.html
@@ -40,7 +40,6 @@
           <section class="hero">
               <div class="case-hero">
                   <img src="images/rfs-laptop.png">
-                  <a href="#"><button class="case-study-button">view prototype</button></a>
               </div>
           </section>
       </header>
@@ -55,6 +54,7 @@
             <p>After a successful stint on Etsy, the entrepreneur decided that it was time to
               host his own site and define his brand. Enter: me. My role was to help him with
               strategy, marketing, and design.</p>
+            <a href="#"><button class="case-study-button">view prototype</button></a>
           </div>
           <section class="intro">
               <div class="intro-text">
@@ -70,14 +70,14 @@
                   <p>During the stakeholder interview, Darcy identified a few other companies
                   with a similar business model:</p>
                   <div class="clearfix"></div>
-                  <div class="inspo">
+                  <ul class="inspo">
                       <li><img src="images/inspo1.png" class="third"></li>
                       <li><img src="images/inspo2.png" class="third"></li>
                       <!--<li><img src="images/inspo3.png" class="sixth"></li>
                       <li><img src="images/comp1.png" class="sixth"></li>-->
                       <li><img src="images/comp2.png" class="third"></li>
                       <!--<li><img src="images/comp3.png" class="sixth"></li>-->
-                  </div>
+                  </ul>
                   <!--<div class="box"><p></p></div>-->
                   <div class="clearfix"></div>
                   <p>Design pattern: the direct competitors use stone/slate textures and colors,
@@ -192,28 +192,28 @@
                       <h3>Colors</h3>
                       <div class="color-samples">
                           <ul class="images">
-                              <li><img src="images/001.png" class="sixth"></li>
-                              <li><img src="images/002.png" class="sixth"></li>
-                              <li><img src="images/003.png" class="sixth"></li>
-                              <li><img src="images/004.png" class="sixth"></li>
-                              <li><img src="images/005.png" class="sixth"></li>
+                              <li><img src="images/001.png" class="third"></li>
+                              <li><img src="images/002.png" class="third"></li>
+                              <li><img src="images/003.png" class="third"></li>
+                              <li><img src="images/004.png" class="third"></li>
+                              <li><img src="images/005.png" class="third"></li>
                           </ul>
                       </div>
                   </div>
                   <div class="other-branding">
-                  <div class="type">
-                      <h3>Typography</h3>
-                      <img src="images/fonts.png">
+                      <div class="type">
+                          <h3>Typography</h3>
+                          <img src="images/fonts.png">
+                      </div>
+                      <div class="button">
+                          <h3>Buttons</h3>
+                          <img src="images/buttons.png">
+                      </div>
+                      <div class="mock">
+                          <h3>Mockup</h3>
+                          <img src="images/mockup.png">
+                      </div>
                   </div>
-                  <div class="button">
-                      <h3>Buttons</h3>
-                      <img src="images/buttons.png">
-                  </div>
-                  <div class="mock">
-                      <h3>Mockup</h3>
-                      <img src="images/mockup.png">
-                  </div>
-              </div>
               </div>
           </section>
           <section class="prototype">
