updated html and css across pages to update the hamburger nav bar

--- a/coop.html
+++ b/coop.html
@@ -32,6 +32,7 @@
               <ul class="nav-bar" id="topnav">
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
                       <i class="fa fa-bars"></i>
+                  <div class="clearfix"></div>
                   <li><a href="index.html">portfolio</a></li>
                   <li><a href="about.html">about</a></li>
                   <li><a href="contact.html">contact</a></li>
