--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                   <a href="javascript:void(0);" class="hamburger" onclick="myFunction()">
                       <i class="fa fa-bars"></i>
                   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                  <div class="clearfix"></div>
                   <li><a href="index.html">portfolio</a></li>
                   <li><a href="about.html">about</a></li>
                   <li><a href="contact.html">contact</a></li>
